unpackaged/objects/Student_Module__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <label>Academic Year (e.g. AY2017/2018)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Modules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_To__c</fullName>
        <label>Count to major/minor?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drop_Reason__c</fullName>
        <label>Reasons for Dropping Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC__c</fullName>
        <label>Modular Credits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module_Code__c</fullName>
        <label>Module Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Host_Faculty__c</fullName>
        <label>Module Host Faculty (e.g. CLS, FOS, etc)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Intructor__c</fullName>
        <label>Module Intructor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Module_Title__c</fullName>
        <label>Module Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overload__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Module is an overload?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Datetime__c</fullName>
        <label>Preferred Datetime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prerequisites__c</fullName>
        <label>Met prerequisites?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reasons for Adding Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Semester__c</fullName>
        <label>Semester (e.g. Semester 1)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drop?</label>
        <type>Checkbox</type>
    </fields>
    <label>Student Module</label>
    <nameField>
        <displayFormat>SM-{0000000000}</displayFormat>
        <label>Student Module ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Modules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>